sbin/fsck/fsutil.h
@@ -28,6 +28,9 @@
  * $FreeBSD$
  */
 
+int checkfstab(int, int (*)(struct fstab *), 
+    int (*) (const char *, const char *, const char *, const char *, pid_t *));
+int getfsopt(struct fstab *, const char *);
 void pfatal(const char *, ...) __printflike(1, 2);
 void pwarn(const char *, ...) __printflike(1, 2);
 void perr(const char *, ...) __printflike(1, 2);
@@ -46,7 +49,3 @@ char *estrdup(const char *);
 #define	CHECK_BACKGRD	0x0008
 #define	DO_BACKGRD	0x0010
 #define	CHECK_CLEAN	0x0020
-
-struct fstab;
-int checkfstab(int, int (*)(struct fstab *), 
-    int (*) (const char *, const char *, const char *, const char *, pid_t *));
