sbin/fsck/preen.c
@@ -62,6 +62,7 @@ struct partentry {
 	char		  	*p_devname;	/* device name */
 	char			*p_mntpt;	/* mount point */
 	char		  	*p_type;	/* file system type */
+	int			 p_failok;	/* failok option set */
 };
 
 static TAILQ_HEAD(part, partentry) badh;
@@ -78,7 +79,7 @@ static TAILQ_HEAD(disk, diskentry) diskh;
 static int nrun = 0, ndisks = 0;
 
 static struct diskentry *finddisk(const char *);
-static void addpart(const char *, const char *, const char *);
+static void addpart(const char *, const char *, const char *, const int);
 static int startdisk(struct diskentry *, 
     int (*)(const char *, const char *, const char *, const char *, pid_t *));
 static void printpart(void);
@@ -132,7 +133,6 @@ checkfstab(int flags, int (*docheck)(struct fstab *),
 				}
 				sumstatus = (*checkit)(fs->fs_vfstype,
 				    name, fs->fs_file, NULL, NULL);
-
 				if (sumstatus)
 					return (sumstatus);
 				continue;
@@ -143,7 +143,8 @@ checkfstab(int flags, int (*docheck)(struct fstab *),
 				sumstatus |= 8;
 				continue;
 			}
-			addpart(fs->fs_vfstype, name, fs->fs_file);
+			addpart(fs->fs_vfstype, name, fs->fs_file,
+			    getfsopt(fs, "failok"));
 		}
 
 		if ((flags & CHECK_PREEN) == 0 || passno == 1 ||
@@ -172,12 +173,17 @@ checkfstab(int flags, int (*docheck)(struct fstab *),
 				continue;
 			}
 
-			if (WIFEXITED(status))
-				retcode = WEXITSTATUS(status);
-			else
-				retcode = 0;
-
 			p = TAILQ_FIRST(&d->d_part);
+
+			if (WIFEXITED(status) == 0) {
+				retcode = 0;
+			} else if (p->p_failok == 0) {
+				retcode = WEXITSTATUS(status);
+			} else {
+				retcode = 0;
+				fprintf(stderr, "%s: failok SPECIFIED, FSCK "
+				    "ERROR(S) IGNORED\n", p->p_devname);
+			}
 
 			if (flags & (CHECK_DEBUG|CHECK_VERBOSE))
 				(void) printf("done %s: %s (%s) = 0x%x\n",
@@ -243,7 +249,6 @@ checkfstab(int flags, int (*docheck)(struct fstab *),
 	return (0);
 }
 
-
 static struct diskentry *
 finddisk(const char *name)
 {
@@ -297,7 +302,7 @@ printpart(void)
 
 
 static void
-addpart(const char *type, const char *dev, const char *mntpt)
+addpart(const char *type, const char *dev, const char *mntpt, const int failok)
 {
 	struct diskentry *d = finddisk(dev);
 	struct partentry *p;
@@ -312,6 +317,7 @@ addpart(const char *type, const char *dev, const char *mntpt)
 	p->p_devname = estrdup(dev);
 	p->p_mntpt = estrdup(mntpt);
 	p->p_type = estrdup(type);
+	p->p_failok = failok;
 
 	TAILQ_INSERT_TAIL(&d->d_part, p, p_entries);
 }
